--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,9 +22,7 @@ input {
   margin-bottom: 10px;
 }
 
-.log-in,
-.log-out,
-.register {
+.log-in, .log-out, .register {
   background-color: #00acb0;
   border-radius: 4px;
   color: #f8f8f8;
@@ -34,13 +32,12 @@ input {
   cursor: pointer;
 }
 
-.log-in:hover,
-.log-out:hover,
-.register:hover {
+.log-in:hover, .log-out:hover, .register:hover {
   background-color: #008183;
 }
 
 /* This line makes the "Register" and "Login" buttons look like links */
+
 .link-button {
   background: none;
   color: inherit;
