Adjusted Login page css and create StaffListItem css

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,6 +17,15 @@ body {
   border-radius: 2px;
 }
 
+.loginFormPanel {
+  background-color: #dbd5d5;
+  width: 30%;
+  height: 230px;
+  margin: 20px auto;
+  padding: 25px;
+  border-radius: 2px;
+}
+
 input {
   margin: 5px;
   margin-bottom: 10px;
